Fix footer alignment, increase submit button size

--- a/src/components/SubmitForm/form.module.scss
+++ b/src/components/SubmitForm/form.module.scss
@@ -11,15 +11,16 @@
 .submitButton {
   display: flex;
   align-items: center;
-  gap: var(--space-xs);
+  gap: var(--space-m);
   background: var(--mauve-12);
   color: var(--mauve-1);
   border: none;
   cursor: pointer;
   border-radius: var(--radius-full);
-  padding-block: var(--space-xs);
-  padding-inline: var(--space-s) var(--space-m);
+  padding-block: var(--space-s);
+  padding-inline: var(--space-l) var(--space-xl);
   margin-inline: auto;
+  font-size: var(--step-1);
   font-weight: var(--font-weight-bold);
 
   @media (hover: hover) and (pointer: fine) {
